--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
+    "recharts": "^2.15.4",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
