--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^4.42.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.66.0",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
+    "react-select": "^5.10.2",
     "recharts": "^2.15.4",
     "styled-components": "^6.1.19"
   },
